# binpacking

./: CMakeLists.txt  Doxyfile  Doxyfile.in  README  approximate_block_solver.c  approximate_block_solver.h  approximate_lp_solver.h  approximated_ilp_solver.h  approximated_lp_solver.h  binpacking.c  binpacking.h  first_fit_test.c  linear_algebra.c  linear_algebra.h  linear_algebra_test.c  make-tests.sh  packing_list.c  packing_list.h  solution.c  solution.h  vector.h
examples/: instance1.csv  instance2.csv
src/: CMakeLists.txt  main.c  parse_instance.c  parse_instance.h
src/lib/: CMakeLists.txt  approximate_block_solver.c  approximate_block_solver.h  approximate_ilp_solver.h  approximate_lp_solver.c  approximate_lp_solver.h  approximate_max_min_resource_sharing.c  approximate_max_min_resource_sharing.h  approximate_max_min_resource_sharing_p.h  binpacking.c  binpacking.h  double_matrix.c  double_matrix.h  double_vector.c  double_vector.h  first_fit.c  first_fit.h  knapsack.c  knapsack.h  linear_algebra.c  linear_algebra.h  mixed_vector.c  mixed_vector.h  packing_list.c  packing_list.h  print_double_array.c  print_double_array.h  print_uint_array.c  print_uint_array.h  types.h  uint_matrix.c  uint_matrix.h  uint_vector.c  uint_vector.h
src/tests/: CMakeLists.txt  approximate_block_solver.c  approximate_lp_solver.c  approximate_max_min_resource_sharing.c  binpacking.c  knapsack.c  linear_algebra.c  make-tests.sh  packing_list.c  test_approximate_max_min_resource_sharing.c  test_binpacking.c  test_first_fit.c  test_knapsack.c  test_linear_algebra.c  test_packing_list.c
tests/: approximate_block_solver.c  first_fit.c  linear_algebra.c  packing_list.c
